管理员登陆

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 													<div class="sign-up">
 														<br>
 														<div class="usertype">User Type</div>
-														<select>
+														<select id="user-type">
   														<option value="user">User</option>
   														<option value="manager">Manager</option>
 														</select>
