--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content" >
 				<div class="modal-header">
+					<br>
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 						&times;</button>
 					<h4 class="modal-title" id="myModalLabel">Don't Wait, Login now!</h4>
@@ -67,17 +68,7 @@
 												<form id="cusLoginFrom">
 													<input name="Email" id="login_email" placeholder="Email Address" type="text" required="">
 													<input name="Password" id="login_pwd" placeholder="Password" type="password" required="">
-													<div class="sign-up">
-														<br>
-														<div class="usertype">User Type</div>
-														<select id="user-type">
-  														<option value="user">User</option>
-  														<option value="manager">Manager</option>
-														</select>
-														<br>
-														<input type="submit" value="Sign in"/>
-													</div>
-												</form>
+</form>
 											</div>
 										</div>
 									</div>
@@ -172,6 +163,9 @@
 			<div class="cart cart box_1">
 				<button class="w3view-cart" onclick="window.location.href='ShoppingCart.html'"><i class="fa fa-cart-arrow-down" ></i></button>
 			</div>
+			<div style="position: absolute;right: 10px;top:90px;font-size: 20px""><button onclick="window.location.href='M_adminLogin.html'"><i class="fas fa fa-user" ></i></button>Manager</div>
+			<span></span>
+			<div style="position: absolute;left: 20px;top:90px;font-size: 20px""><button onclick="window.location.href='#'"><i class="fas fa fa-users" ></i></button>G Center</div>
 		</div>
 	</div>
 	<!-- //header -->
