--- a/M_adminLogin.html
+++ b/M_adminLogin.html
@@ -4,7 +4,7 @@
 <title>后台管理系统</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="robots" content="nofollow"/>
-<link href="style/adminStyle.css" rel="stylesheet" type="text/css" />
+<link href="css/adminStyle.css" rel="stylesheet" type="text/css" />
 <style>
 body{width:100%;height:100%;overflow:hidden;background:url(images/pc_loginBg.jpg) no-repeat;background-size:cover;position:absolute;}
 </style>
