--- a/M_menu.html
+++ b/M_menu.html
@@ -3,7 +3,7 @@
 <head>
 <title>左侧导航</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="style/adminStyle.css" rel="stylesheet" type="text/css" />
+<link href="css/adminStyle.css" rel="stylesheet" type="text/css" />
 <script src="js/jquery.js"></script>
 <script src="js/public.js"></script>
 </head>
