--- a/M_order_detail.html
+++ b/M_order_detail.html
@@ -3,7 +3,7 @@
 <head>
 <title>订单详情</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="style/adminStyle.css" rel="stylesheet" type="text/css" />
+<link href="css/adminStyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
  <div class="wrap">
