--- a/M_top.html
+++ b/M_top.html
@@ -3,7 +3,7 @@
 <head>
 <title>header</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="style/adminStyle.css" rel="stylesheet" type="text/css" />
+<link href="css/adminStyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="header">
