--- a/M_user_list.html
+++ b/M_user_list.html
@@ -3,9 +3,9 @@
 <head>
 <title>会员列表</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="../黑白宽屏的电商后台模板/style/adminStyle.css" rel="stylesheet" type="text/css" />
-<script src="../黑白宽屏的电商后台模板/js/jquery.js"></script>
-<script src="../黑白宽屏的电商后台模板/js/public.js"></script>
+<link href="css/adminStyle.css" rel="stylesheet" type="text/css" />
+<script src="js/jquery.js"></script>
+<script src="js/public.js"></script>
 </head>
 <body>
  <div class="wrap">
