--- a/M_top.html
+++ b/M_top.html
@@ -10,7 +10,7 @@
  <div class="logo">
  </div>
  <div class="fr top-link">
-  <a href="#" target="_blank" title="访问站点"><i class="shopLinkIcon"></i><span>Visit Website</span></a>
+  <a href="index.html" target="_blank" title="访问站点"><i class="shopLinkIcon"></i><span>Visit Website</span></a>
   <a href="admin_list.html" target="mainCont" title="DeathGhost"><i class="adminIcon"></i><span>Manager：DeathGhost</span></a>
   <a href="#" title="修改密码"><i class="clearIcon"></i><span>Wipe Cache Partition</span></a>
   <a href="revise_password.html" target="mainCont" title="修改密码"><i class="revisepwdIcon"></i><span>Change Password</span></a>
