--- a/index.html
+++ b/index.html
@@ -163,9 +163,6 @@
 			<div class="cart cart box_1">
 				<button class="w3view-cart" onclick="window.location.href='ShoppingCart.html'"><i class="fa fa-cart-arrow-down" ></i></button>
 			</div>
-			<div style="position: absolute;right: 10px;top:90px;font-size: 20px""><button onclick="window.location.href='M_adminLogin.html'"><i class="fas fa fa-user" ></i></button>Manager</div>
-			<span></span>
-			<div style="position: absolute;left: 20px;top:90px;font-size: 20px""><button onclick="window.location.href='#'"><i class="fas fa fa-users" ></i></button>G Center</div>
 		</div>
 	</div>
 	<!-- //header -->
@@ -188,6 +185,9 @@
 						<!-- Mega Menu -->
 						<li>
 							<a href="products.html">Products</a>
+						</li>
+						<li>
+							<a href="#">G Center</a>
 						</li>
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="mail.html">Mail Us</a></li>
