--- a/M_top.html
+++ b/M_top.html
@@ -11,11 +11,24 @@
  </div>
  <div class="fr top-link">
   <a href="index.html" target="_blank" title="访问站点"><i class="shopLinkIcon"></i><span>Visit Website</span></a>
-  <a href="admin_list.html" target="mainCont" title="DeathGhost"><i class="adminIcon"></i><span>Manager：DeathGhost</span></a>
-  <a href="#" title="修改密码"><i class="clearIcon"></i><span>Wipe Cache Partition</span></a>
-  <a href="revise_password.html" target="mainCont" title="修改密码"><i class="revisepwdIcon"></i><span>Change Password</span></a>
-  <a href="#" title="安全退出" style="background:rgb(60,60,60);"><i class="quitIcon"></i><span>Login Out</span></a>
+  <a href="javascript:void(0)"><i class="adminIcon"></i><span id="admin_name_span">Manager：DeathGhost</span></a>
+  <a href="javascript:void(0)" onclick="logout()" title="安全退出" style="background:rgb(60,60,60);"><i class="quitIcon"></i><span>Login Out</span></a>
  </div>
 </div>
 </body>
+<script>
+    var admin_name = sessionStorage.getItem("Admin_Name")
+    if(admin_name){
+        document.getElementById("admin_name_span").innerHTML = "Manager：" + admin_name
+    }else{
+        window.parent.location.href = "M_adminLogin.html"
+    }
+
+    function logout(){
+        sessionStorage.removeItem("Admin_ID")
+        sessionStorage.removeItem("Admin_Name")
+        window.parent.location.href = "M_adminLogin.html"
+    }
+</script>
+
 </html>
