--- a/M_order_detail.html
+++ b/M_order_detail.html
@@ -8,76 +8,71 @@
 <body>
  <div class="wrap">
   <div class="page-title">
-    <span class="modular fl"><i class="order"></i><em>订单编号：2015041803225</em></span>
+    <span class="modular fl"><i class="order"></i><em>Order Number：2015041803225</em></span>
   </div>
   <dl class="orderDetail">
-   <dt class="order-h">订单详情</dt>
+   <dt class="order-h">Order Details</dt>
    <dd>
     <ul>
      <li>
-      <span class="h-cont h-right">收件人姓名：</span>
-      <span class="h-cont h-left">张三</span>
+      <span class="h-cont h-right">Contact Name：</span>
+      <span class="h-cont h-left">Sophia</span>
      </li>
      <li>
-      <span class="h-cont h-right">联系电话：</span>
+      <span class="h-cont h-right">ContactNumber：</span>
       <span class="h-cont h-left">15825518194</span>
      </li>
      <li>
-      <span class="h-cont h-right">联系地址：</span>
-      <span class="h-cont h-left">陕西省西安市未央区220号</span>
+      <span class="h-cont h-right">DeliverAddress：</span>
+      <span class="h-cont h-left">Fanling Center</span>
      </li>
      <li>
-      <span class="h-cont h-right">付款状态：</span>
-      <span class="h-cont h-left">未付款</span>
+      <span class="h-cont h-right">Payment Status：</span>
+      <span class="h-cont h-left">NoPaid</span>
      </li>
      <li>
-      <span class="h-cont h-right">下单时间：</span>
+      <span class="h-cont h-right">Ordering  &nbsp;Time：</span>
       <span class="h-cont h-left">2015-04-18 13:25</span>
      </li>
      <li>
-      <span class="h-cont h-right">付款时间：</span>
+      <span class="h-cont h-right">Payment &nbsp;&nbsp;Time：</span>
       <span class="h-cont h-left">2015-04-18 13:35</span>
      </li>
     </ul>
    </dd>
    <dd style="padding:1em 0;">
-    <span><b>订单留言：</b></span>
-    <span>...这里是用户留言信息，务必***请到****谢谢~</span>
+    <span><b>Message：</b></span>
+    <span>...Congratulations!~It's gonna end</span>
    </dd>
    <dd>
     <table class="list-style">
      <tr>
-      <th>缩略图</th>
-      <th>产品</th>
-      <th>单价</th>
-      <th>数量</th>
-      <th>小计</th>
+		 <th>ProductId</th>
+      <th>ProductName</th>
+      <th>Colour</th>
+      <th>Storage</th>
+      <th>Amount</th>
+      <th>Subtotal</th>
      </tr>
      <tr>
-      <td><img src="#" class="thumbnail"/></td>
-      <td>这里是产品名称哦</td>
+      <td>5aa151139545040065de6563</td>
+      <td>GphoneX</td>
       <td>
        <span>
-        <i>￥</i>
-        <em>0.00</em>
+		Silver
        </span>
       </td>
-      <td>1</td>
+      <td>256G</td>
       <td>
        <span>
-        <i>￥</i>
-        <em>0.00</em>
+        <em>1</em>
        </span>
       </td>
+		 <td>9888</td>
      </tr>
      <tr>
-      <td colspan="5">
-       <div class="fr">
-        <span style="font-size:15px;font-weight:bold;">
-         <i>订单共计金额：￥</i>
-         <b>0.00</b>
-        </span>
-       </div>
+      <td colspan="6" style="width: 1216px">
+       <div class="fr" ><span style="font-size:15px;font-weight:bold;"> <em>In Total</em> <strong>9888</strong> </span></div>
       </td>
      </tr>
     </table>
@@ -85,7 +80,7 @@
    <dd>
     <table class="noborder">
      <tr>
-      <td width="10%" style="text-align:right;"><b>管理员操作：</b></td>
+      <td width="10%" style="text-align:right;"><b>Manager&nbsp;&nbsp;&nbsp;&nbsp;<br> Operation：</b></td>
       <td>
        <textarea class="block" style="width:80%;height:35px;outline:none;"></textarea>
       </td>
@@ -95,10 +90,10 @@
    <dd>
       <!-- Operation -->
 	  <div class="BatchOperation">
-	   <input type="button" value="打印订单" class="btnStyle"/>
-	   <input type="button" value="配送" class="btnStyle"/>
-	   <input type="button" value="发货" class="btnStyle"/>
-	   <input type="button" value="取消订单" class="btnStyle"/>
+	   <input type="button" value="Print Order" class="btnStyle"/>
+	   <input type="button" value="Arrange shipment" class="btnStyle"/>
+	   <input type="button" value="Refill" class="btnStyle"/>
+	   <input type="button" value="Cancel Order" class="btnStyle"/>
 	  </div>
    </dd>
   </dl>
