--- a/M_order_list.html
+++ b/M_order_list.html
@@ -59,7 +59,7 @@
      <span>Wait to be delivered</span>
     </td>
     <td class="center">
-     <a href="order_detail.html" class="inline-block" title="查看订单"><img src="images/icon_view.gif"/></a>
+     <a href="M_order_detail.html" class="inline-block" title="查看订单"><img src="images/icon_view.gif"/></a>
     </td>
    </tr>
   </table>
