--- a/M_user_list.html
+++ b/M_user_list.html
@@ -34,12 +34,12 @@
     </td>
     <td class="center">1234</td>
     <td class="center">DeathGhost@sina.cn</td>
-    <td class="center"><img src="../黑白宽屏的电商后台模板/images/yes.gif"/></td>
+    <td class="center"><img src="images/yes.gif"/></td>
     <td class="center">2018-03-09 13:26:13</td>
     <td class="center">
-     <a href="../黑白宽屏的电商后台模板/edit_user.html" class="inline-block" title="编辑"><img src="../黑白宽屏的电商后台模板/images/icon_edit.gif"/></a>
-     <a href="../黑白宽屏的电商后台模板/account.html" class="inline-block" title="资金管理"><img src="../黑白宽屏的电商后台模板/images/icon_account.gif"/></a>
-     <a class="inline-block" title="删除"><img src="../黑白宽屏的电商后台模板/images/icon_drop.gif"/></a>
+     <a href="edit_user.html" class="inline-block" title="编辑"><img src="images/icon_edit.gif"/></a>
+     <a href="account.html" class="inline-block" title="资金管理"><img src="images/icon_account.gif"/></a>
+     <a class="inline-block" title="删除"><img src="images/icon_drop.gif"/></a>
     </td>
    </tr>
    
@@ -50,12 +50,12 @@
     </td>
     <td class="center">123</td>
     <td class="center">DeathGhost@sina.cn</td>
-<td class="center"><img src="../黑白宽屏的电商后台模板/images/no.gif"/></td>
+<td class="center"><img src="images/no.gif"/></td>
     <td class="center">2018-03-06 13:10:48</td>
     <td class="center">
-     <a href="../黑白宽屏的电商后台模板/edit_user.html" class="inline-block" title="编辑"><img src="../黑白宽屏的电商后台模板/images/icon_edit.gif"/></a>
-     <a href="../黑白宽屏的电商后台模板/account.html" class="inline-block" title="资金管理"><img src="../黑白宽屏的电商后台模板/images/icon_account.gif"/></a>
-     <a class="inline-block" title="删除"><img src="../黑白宽屏的电商后台模板/images/icon_drop.gif"/></a>
+     <a href="edit_user.html" class="inline-block" title="编辑"><img src="images/icon_edit.gif"/></a>
+     <a href="account.html" class="inline-block" title="资金管理"><img src="images/icon_account.gif"/></a>
+     <a class="inline-block" title="删除"><img src="images/icon_drop.gif"/></a>
     </td>
    </tr>
   </table>
