--- a/M_menu.html
+++ b/M_menu.html
@@ -1,48 +1,60 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<title>左侧导航</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="css/adminStyle.css" rel="stylesheet" type="text/css" />
-<script src="js/jquery.js"></script>
-<script src="js/public.js"></script>
+    <title>左侧导航</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="css/adminStyle.css" rel="stylesheet" type="text/css" />
+    <script src="js/jquery.js"></script>
+    <script src="js/public.js"></script>
 </head>
+
 <body style="background:#313131">
-<div class="menu-list">
- <a href="M_main.html" target="mainCont" class="block menu-list-title center" style="border:none;margin-bottom:8px;color:#fff;">Index</a>
- <ul>
-  <li class="menu-list-title">
-   <span> Order Management</OBJECT></span>
-   <i>◢</i>
-  </li>
-  <li>
-   <ul class="menu-children">
-      <li><a href="M_order_list.html" title="商品列表" target="mainCont">Order List</a></li>
-   </ul>
-  </li>
- 
-  <li class="menu-list-title">
-   <span>Goods Managment</span>
-   <i>◢</i>
-  </li>
-  <li>
-   <ul class="menu-children">
-    <li><a href="M_product_list.html" title="商品列表" target="mainCont">Goods List</a></li>
-    <li><a href="M_addproduct.html" title="商品分类" target="mainCont">Add Goods</a></li>
-   </ul>
-  </li>
-  
-  <li class="menu-list-title">
-   <span>Membership Management</span>
-   <i>◢</i>
-  </li>
-  <li>
-   <ul class="menu-children">
-    <li><a href="M_user_list.html" title="会员列表" target="mainCont">Member List</a></li>
-   </ul>
-  </li>
-    
- </ul>
-</div>
+    <div class="menu-list">
+        <a href="M_main.html" target="mainCont" class="block menu-list-title center" style="border:none;margin-bottom:8px;color:#fff;">Index</a>
+        <ul>
+            <li class="menu-list-title">
+                <span> Order Management</OBJECT>
+                </span>
+                <i>◢</i>
+            </li>
+            <li>
+                <ul class="menu-children">
+                    <li>
+                        <a href="M_order_list.html" title="商品列表" target="mainCont">Order List</a>
+                    </li>
+                </ul>
+            </li>
+
+            <li class="menu-list-title">
+                <span>Goods Managment</span>
+                <i>◢</i>
+            </li>
+            <li>
+                <ul class="menu-children">
+                    <li>
+                        <a href="M_product_list.html" title="商品列表" target="mainCont">Goods List</a>
+                    </li>
+                    <li>
+                        <a href="M_addproduct.html" title="商品分类" target="mainCont">Add Goods</a>
+                    </li>
+                </ul>
+            </li>
+
+            <li class="menu-list-title">
+                <span style="white-space: nowrap">Membership Management</span>
+                <i>◢</i>
+            </li>
+            <li>
+                <ul class="menu-children">
+                    <li>
+                        <a href="M_user_list.html" title="会员列表" target="mainCont">Member List</a>
+                    </li>
+                </ul>
+            </li>
+
+        </ul>
+    </div>
 </body>
+
 </html>
