--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 												<form id="cusLoginFrom">
 													<input name="Email" id="login_email" placeholder="Email Address" type="text" required="">
 													<input name="Password" id="login_pwd" placeholder="Password" type="password" required="">
+													<input type="submit" value="Sign in"/>
 </form>
 											</div>
 										</div>
